--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ botocore==1.27.18
 certifi==2021.10.8
 Django==4.0.4
 django-crispy-forms==1.14.0
+django-heroku==0.3.1
 django-storages==1.12.3
 gunicorn==20.1.0
 idna==3.3
